--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.5.1"
+actix-web = {version = "4.5.1"}
+clap = { version = "4.5.4", features = ["derive"] }
 config = "0.14.0"
 
 metrics = "0.22.3"
